--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,15 @@ body {
 a{
   text-decoration: none;
 }
+
+@keyframes animationDown{
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(5px);
+  }
+  60% {
+    transform: translateY(3px);
+  }
+}
